adding profile for preprocessed input

--- a/nextflow.config
+++ b/nextflow.config
@@ -16,7 +16,7 @@ params {
     // short read preprocessing options
     skip_fastqc                          = false
     skip_fastp                           = false
-    skip_adapter_trimming                = false
+    skip_sr_adapter_trimming             = false
     clip_tool                            = 'fastp'
     reads_minlength                      = 15
     fastp_save_trimmed_fail              = false
@@ -65,6 +65,7 @@ params {
     pydamage_accuracy                    = 0.5
 
     // taxonomy options
+    skip_taxonomic_classification        = true
     centrifuge_db                        = null
     kraken2_db                           = null
     skip_krona                           = false
@@ -80,7 +81,7 @@ params {
     gtdbtk_pplacer_scratch               = true
 
     // long read preprocessing options
-    skip_adapter_trimming                = false
+    skip_lr_adapter_trimming             = false
     keep_lambda                          = false
     longreads_min_length                 = 1000
     longreads_keep_percent               = 90
@@ -89,11 +90,11 @@ params {
     lambda_reference                     = "${baseDir}/assets/data/GCA_000840245.1_ViralProj14204_genomic.fna.gz"
 
     // binning options
-    skip_metabat2                   = false
-    skip_maxbin2                    = false
-    refine_bins_dastool             = false
-    refine_bins_dastool_threshold   = 0.5
-    postbinning_input               = 'raw_bins_only'
+    skip_metabat2                        = false
+    skip_maxbin2                         = false
+    refine_bins_dastool                  = false
+    refine_bins_dastool_threshold        = 0.5
+    postbinning_input                    = 'raw_bins_only'
 
     // Bin QC
     skip_busco                           = false
@@ -213,6 +214,7 @@ profiles {
         podman.enabled         = false
         shifter.enabled        = false
     }
+    preprocessed        { includeConfig 'conf/preprocessed.config'        }
     test                { includeConfig 'conf/test.config'                }
     test_host_rm        { includeConfig 'conf/test_host_rm.config'        }
     test_hybrid         { includeConfig 'conf/test_hybrid.config'         }
@@ -222,6 +224,7 @@ profiles {
     test_ancient_dna    { includeConfig 'conf/test_ancient_dna.config'    }
     test_adapterremoval { includeConfig 'conf/test_adapterremoval.config' }
     test_binrefinement  { includeConfig 'conf/test_binrefinement.config'  }
+    test_preprocessed   { includeConfig 'conf/test_preprocessed.config'   }
 
 }
 
