added config for info and new modules for decontam

--- a/nextflow.config
+++ b/nextflow.config
@@ -34,6 +34,8 @@ params {
     host_genome                          = null
     host_removal_verysensitive           = false
     host_removal_save_ids                = false
+    decontaminate                        = false
+    taxa_list                            = null
 
     // binning options
     bowtie2_mode                         = null
@@ -215,6 +217,7 @@ profiles {
         shifter.enabled        = false
     }
     preprocessed        { includeConfig 'conf/preprocessed.config'        }
+    no_sched            { includeConfig 'conf/no_sched.config'            }
     test                { includeConfig 'conf/test.config'                }
     test_host_rm        { includeConfig 'conf/test_host_rm.config'        }
     test_hybrid         { includeConfig 'conf/test_hybrid.config'         }
