adding config for info

--- a/nextflow.config
+++ b/nextflow.config
@@ -215,6 +215,7 @@ profiles {
         shifter.enabled        = false
     }
     preprocessed        { includeConfig 'conf/preprocessed.config'        }
+    no_sched            { includeConfig 'conf/no_sched.config'            }
     test                { includeConfig 'conf/test.config'                }
     test_host_rm        { includeConfig 'conf/test_host_rm.config'        }
     test_hybrid         { includeConfig 'conf/test_hybrid.config'         }
