--- a/nextflow.config
+++ b/nextflow.config
@@ -79,6 +79,10 @@ params {
     gtdbtk_min_af                        = 0.65
     gtdbtk_pplacer_cpus                  = 1
     gtdbtk_pplacer_scratch               = true
+    phylophlan                           = false
+    phylophlan_nref                      = 10
+    phylophlan_diversity                 = low
+    taxa_oi                              = null
 
     // long read preprocessing options
     skip_lr_adapter_trimming             = false
