--- a/nextflow.config
+++ b/nextflow.config
@@ -109,6 +109,11 @@ params {
     spadeshybrid_fix_cpus                = -1
     metabat_rng_seed                     = 1
 
+    // start from bins
+    params.refined_bins                  = null
+    params.refined_unbins                = null
+    params.refined_depths_summary        = null
+
     // References
     igenomes_base                        = 's3://ngi-igenomes/igenomes'
     igenomes_ignore                      = false
