--- a/conf/base.config
+++ b/conf/base.config
@@ -141,9 +141,23 @@ process {
         maxRetries    = 5
     }
     //returns exit code 247 when running out of memory
+    withName: BOWTIE2_ASSEMBLY_BUILD {
+        cpus          = { check_max (2    * task.attempt, 'cpus'   ) }
+        memory        = { check_max (12.GB * task.attempt, 'memory' ) }
+        time          = { check_max (1.h  * task.attempt, 'time'   ) }
+        errorStrategy = { task.exitStatus in [143,137,104,134,139,247] ? 'retry' : 'finish' }
+    }
+
+    withName: BOWTIE2_ASSEMBLY_BUILD {
+        cpus          = { check_max (2    * task.attempt, 'cpus'   ) }
+        memory        = { check_max (12.GB * task.attempt, 'memory' ) }
+        time          = { check_max (1.h  * task.attempt, 'time'   ) }
+        errorStrategy = { task.exitStatus in [143,137,104,134,139,247] ? 'retry' : 'finish' }
+    }
+
     withName: BOWTIE2_ASSEMBLY_ALIGN {
         cpus          = { check_max (2    * task.attempt, 'cpus'   ) }
-        memory        = { check_max (8.GB * task.attempt, 'memory' ) }
+        memory        = { check_max (12.GB * task.attempt, 'memory' ) }
         time          = { check_max (8.h  * task.attempt, 'time'   ) }
         errorStrategy = { task.exitStatus in [143,137,104,134,139,247] ? 'retry' : 'finish' }
     }
